option('enable-tizen', type: 'boolean', value: false)
option('enable-blas', type: 'boolean', value: true)
option('enable-cublas', type: 'boolean', value: false)
option('enable-app', type: 'boolean', value: true)
option('install-app', type: 'boolean', value: true)
option('use_gym', type: 'boolean', value: false)
option('enable-capi', type: 'boolean', value: true)
option('enable-ccapi', type: 'boolean', value: true)
option('enable-test', type: 'boolean', value: true)
option('enable-logging', type: 'boolean', value: true)
option('enable-tizen-feature-check', type: 'boolean', value: true)
option('enable-nnstreamer-tensor-filter', type: 'boolean', value: true)
option('enable-nnstreamer-backbone', type: 'boolean', value: true)
option('enable-tflite-backbone', type: 'boolean', value: true)
option('enable-android', type: 'boolean', value: false)
option('enable-profile', type: 'boolean', value: false)
option('enable-tflite-interpreter', type: 'boolean', value: true)

# dependency conflict resolution
option('capi-ml-inference-actual', type: 'string', value: 'capi-ml-inference',
        description: 'backward compatible dependency name of capi-ml-inference')
option('capi-ml-common-actual', type: 'string', value: 'capi-ml-common',
        description: 'backward compatible dependency name of capi-ml-common')

# detect build os
option('reduce-tolerance', type: 'boolean', value: true)
